# mydrive

./: docker-compose.yml  main.py  pyproject.toml
Mermaid/: MerkelTree
ProjectDocs/: Components.md  Installation Steps.md  Welcome.md
ProjectDocs/.obsidian/: hotkeys.json  workspace.json
ProjectDocs/.obsidian/plugins/obsidian-excalidraw-plugin/: data.json
ProjectDocs/Excalidraw/: FileSender.md  HLSD.md  KeyGenerationProcess.md
ProjectDocs/LLD/: DB Services.md  Database Documents.md  File Receiver.md  File Sender.md  Nginx.md
Trash/: APIPayload.json  DocumentDB_test1.py  DocumentDB_test2.py  file_service.proto  file_service_pb2.py  file_service_pb2_grpc.py  flask_client.py  grpc_server.py  trash.py
docker/: Dockerfile.base  Dockerfile.nginx  Dockerfile.receiver  Dockerfile.sender  Dockerfile.uiux
nginx/: nginx.conf
services/uiux/: app.py
